# visual_lean

./: CMakeLists.txt  README.md  docker-compose.yml  hott.hpp
xtra/HelloWorld/: Main.lean
